--- a/frontend/src/Components/ReadBlogs.css
+++ b/frontend/src/Components/ReadBlogs.css
@@ -36,6 +36,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
   .author-other-blogs {
     display: flex;
